--- a/Hosts/VS/TddStudioPackage/Resources.resx
+++ b/Hosts/VS/TddStudioPackage/Resources.resx
@@ -117,11 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CannotCloseSolution" xml:space="preserve">
+    <value>Cannot close solution now as a TddStud10 run is in progress. Try again once the run is complete.</value>
+  </data>
   <data name="CanNotCreateWindow" xml:space="preserve">
     <value>Can not create tool window.</value>
   </data>
+  <data name="DisableTddStud10State" xml:space="preserve">
+    <value>Disable TddStud&amp;10</value>
+  </data>
+  <data name="EnableTddStud10State" xml:space="preserve">
+    <value>Enable TddStud&amp;10</value>
+  </data>
   <data name="MessageBoxTitle" xml:space="preserve">
     <value>TDD Studio</value>
+  </data>
+  <data name="ProductTitle" xml:space="preserve">
+    <value>Test Driven Development Studio</value>
   </data>
   <data name="ToolWindowTitle" xml:space="preserve">
     <value>Test Driven Development Studio</value>
